--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_PASS=123
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=UniTrade
-ALLOWED_ORIGINS=http://127.0.0.1:55001,http://127.0.0.1:55000,http://localhost:5173,http://localhost:5500
+ALLOWED_ORIGINS=http://127.0.0.1:55001,http://127.0.0.1:55000,http://localhost:5173,http://localhost:5500, https://frontend-production-fe496.up.railway.app
 
 
 # 🔐 Auth config
