--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,22 @@
+# 🗄️ Database config
+# ⚙️ Railway / Render sẽ cung cấp biến này tự động
+# Nếu bạn chạy local, bỏ comment DATABASE_URL và điền connection string local vào.
+# DATABASE_URL=postgres://user:password@localhost:5432/UniTrade
+
+# --- Local development fallback ---
+DB_USER=postgres
+DB_PASS=123
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=unitrade
-DB_USER=unitrade_user
-DB_PASS=change_me
-JWT_SECRET=please_change_to_strong_secret
-ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+DB_NAME=UniTrade
+
+# 🌐 Frontend origins allowed for CORS
+# Dạng CSV, ví dụ cho local và production:
+ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:55000,https://your-frontend-domain.com
+
+# 🔐 Authentication
+JWT_SECRET=strongsecretkey
+
+# 🚀 Server
 PORT=5000
+BASE_URL=http://localhost:5000
