--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-# 🗄️ Database config (local)
+
+
+# 🗄️ PostgreSQL (Railway)
 DB_USER=postgres
-DB_PASS=123
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=UniTrade
-ALLOWED_ORIGINS=http://127.0.0.1:55001,http://127.0.0.1:55000,http://localhost:5173,http://localhost:5500, https://frontend-production-fe496.up.railway.app
-
-
-# 🔐 Auth config
-JWT_SECRET=supersecretkey
+DB_PASS=acrOQNVlhDLySmQQbLPBZZyqAXFPSXMC
+DB_HOST=yamabiko.proxy.rlwy.net
+DB_PORT=15459
+DB_NAME=railway
 
 # 🌐 Server config
-PORT=5000
-BASE_URL=http://localhost:5000
+PORT=${PORT}
+BASE_URL=https://backend-production-16c1.up.railway.app
+
+# 🔐 JWT
+JWT_SECRET=supersecretkey
