--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ BASE_URL=https://backend-production-16c1.up.railway.app
 
 # 🔐 JWT
 JWT_SECRET=supersecretkey
+
+ALLOWED_ORIGINS=https://frontendd-production-43d4.up.railway.app
